--- a/public/app.scss
+++ b/public/app.scss
@@ -148,7 +148,7 @@ a {
   padding: 0.5em;
   border: 1px solid grey;
   border-radius: 9px;
-  width: 70px;
+  width: 100%;
 }
 #headline {
   grid-row: 1;
